[package]
name = "multi-token-agreement"
version = "0.0.1"
authors = ["0xDEFSER <info@defser.nl>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.16.0
"""

[dependencies]
cosmwasm-std = "2.0.4"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.61" }

[dev-dependencies]
cosmwasm-schema = "2.0.4"
cw-multi-test = "2.0.1"
